--- a/apps/1console/pkg.yml
+++ b/apps/1console/pkg.yml
@@ -6,27 +6,27 @@
 # to you under the Apache License, Version 2.0 (the
 # "License"); you may not use this file except in compliance
 # with the License.  You may obtain a copy of the License at
-#
-# http://www.apache.org/licenses/LICENSE-2.0
+# 
+#  http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-#  KIND, either express or implied.  See the License for the
+# KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
 #
 
-.app.db
-.app
-bin
-obj
-tags
-.gdb_history
-.gdb_out
-.gdb_cmds
-*~
-.DS_Store
-*.swp
-*.swo
-*.code-workspace
+pkg.name: apps/1console
+pkg.type: app
+pkg.description: Blinky with console.
+pkg.author:
+pkg.homepage:
+pkg.keywords:
+
+pkg.deps:
+    - "@apache-mynewt-core/kernel/os"
+    - "@apache-mynewt-core/hw/hal"
+    - "@apache-mynewt-core/sys/console/full"
+    - "@apache-mynewt-core/sys/log/stub"
+    - "@apache-mynewt-core/sys/shell"
